cache集成